user service imp test